RESOLVED FIXED118370
[EFL] DumpRenderTree doesn't run if "opengl_x11" engine is not available.
https://bugs.webkit.org/show_bug.cgi?id=118370
Summary [EFL] DumpRenderTree doesn't run if "opengl_x11" engine is not available.
Viatcheslav Ostapenko
Reported 2013-07-03 13:32:40 PDT
Should have fallback like WK2 test runner has.
Attachments
Patch (1.53 KB, patch)
2013-07-03 13:41 PDT, Viatcheslav Ostapenko
no flags
Patch (1.54 KB, patch)
2013-07-03 14:10 PDT, Viatcheslav Ostapenko
no flags
Patch for landing (1.52 KB, patch)
2013-07-04 22:58 PDT, Viatcheslav Ostapenko
no flags
Viatcheslav Ostapenko
Comment 1 2013-07-03 13:41:30 PDT
Viatcheslav Ostapenko
Comment 2 2013-07-03 14:10:32 PDT
Chris Dumez
Comment 3 2013-07-03 21:34:13 PDT
Comment on attachment 206024 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=206024&action=review > Tools/DumpRenderTree/efl/DumpRenderTree.cpp:438 > const char* engine = 0; The engine here can be moved inside the #ifdef.
Chris Dumez
Comment 4 2013-07-03 21:34:50 PDT
Comment on attachment 206024 [details] Patch Please fix the nit before landing.
Chris Dumez
Comment 5 2013-07-03 21:44:21 PDT
Comment on attachment 206024 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=206024&action=review >> Tools/DumpRenderTree/efl/DumpRenderTree.cpp:438 >> const char* engine = 0; > > The engine here can be moved inside the #ifdef. We actually don't even need this variable. We can simply pass ""opengl_x11" to ecore_evas_new().
Viatcheslav Ostapenko
Comment 6 2013-07-04 22:58:52 PDT
Created attachment 206123 [details] Patch for landing
WebKit Commit Bot
Comment 7 2013-07-04 23:54:16 PDT
Comment on attachment 206123 [details] Patch for landing Clearing flags on attachment: 206123 Committed r152408: <http://trac.webkit.org/changeset/152408>
WebKit Commit Bot
Comment 8 2013-07-04 23:54:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.