[EFL] DumpRenderTree doesn't run if "opengl_x11" engine is not available https://bugs.webkit.org/show_bug.cgi?id=118370

Patch by Viatcheslav Ostapenko <sl.ostapenko@samsung.com> on 2013-07-04
Reviewed by Christophe Dumez.

Add fallback to software X11 engine if opengl_x11 engine creation fails.

* DumpRenderTree/efl/DumpRenderTree.cpp:
(initEcoreEvas):

Canonical link: https://commits.webkit.org/136401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152408 268f45cc-cd09-0410-ab3c-d52691b4dbfc